Fixing profile photo spacing

--- a/styles.css
+++ b/styles.css
@@ -8,9 +8,10 @@
         font-size: 20px;
     }
     #fotoPerfil {
-        display: block; 
-        margin-left: auto;
-        margin-right: auto;
+        display: fixed; 
+        align-items: space-around;
+        right: 500px;
+        margin-right: 5px;
         height:240px;
         width: 150px;
     }
